--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-zaileys",
   "version": "1.0.0",
-  "description": "Starter kit for Zaileys Library.",
+  "description": "Starter kit for Zaileys Library",
   "keywords": [
     "starter",
     "zaileys",
@@ -27,6 +27,6 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-    "zaileys": "^2.0.4"
+    "zaileys": "latest"
   }
 }
